--- a/pro/Objects/mFw.build_log.htm
+++ b/pro/Objects/mFw.build_log.htm
@@ -22,62 +22,64 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\MySpace\Github\mcuFrameworks_Loop\pro\mFw.uvprojx
-Project File Date:  03/03/2020
+Project File Date:  03/11/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Users\M\AppData\Local\Keil\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_stm32f40_41xxx.s...
 assembling m_thread_switch.S...
-compiling mConfig.c...
-compiling stm32f4xx_syscfg.c...
-compiling system_stm32f4xx.c...
 compiling stm32f4xx_it.c...
 compiling stm32f4xx_gpio.c...
+compiling system_stm32f4xx.c...
 compiling misc.c...
-compiling main.c...
+compiling stm32f4xx_syscfg.c...
 compiling stm32f4xx_usart.c...
 compiling mUart1Driver.c...
 compiling stm32f4xx_rcc.c...
-compiling mTask_console.c...
+compiling mTcpDriver.c...
 compiling stm32f4xx_tim.c...
+compiling mConfig.c...
+compiling mSys.c...
+compiling main.c...
+compiling mTask_console.c...
 compiling mTask_msgTestP.c...
 compiling mTask_msgTestS.c...
-compiling mTcpDriver.c...
 compiling mTask_template.c...
 compiling mTask_tcpServer.c...
+compiling api_msg.c...
 compiling api_lib.c...
 compiling err.c...
-compiling api_msg.c...
 compiling netbuf.c...
 compiling netdb.c...
-compiling tcpip.c...
 compiling netifapi.c...
-compiling sockets.c...
+compiling tcpip.c...
 compiling autoip.c...
+compiling sockets.c...
+compiling mSys_runLed.c...
+compiling malloc.c...
 compiling igmp.c...
 compiling inet.c...
+compiling lan8720.c...
+compiling timer.c...
 compiling icmp.c...
 compiling inet_chksum.c...
-compiling malloc.c...
-compiling ip_addr.c...
-compiling ip.c...
-compiling timer.c...
 compiling sys_arch.c...
-compiling ip_frag.c...
+compiling ip.c...
+compiling ip_addr.c...
 compiling def.c...
-compiling lan8720.c...
+compiling lwip_comm.c...
+compiling stm32f4x7_eth.c...
 compiling dhcp.c...
 compiling dns.c...
-compiling mem.c...
-compiling init.c...
-compiling memp.c...
 compiling tcp_server_demo.c...
-compiling stm32f4x7_eth.c...
+compiling init.c...
+compiling ip_frag.c...
+compiling mem.c...
+compiling memp.c...
 compiling netif.c...
-compiling raw.c...
 compiling stats.c...
-compiling lwip_comm.c...
+compiling raw.c...
 compiling pbuf.c...
 compiling timers.c...
 compiling udp.c...
@@ -92,8 +94,11 @@ compiling tcp_out.c...
 ..\thirdParty\LWIP\lwip-1.4.1\src\core\tcp_out.c: 2 warnings, 0 errors
 compiling ethernetif.c...
 linking...
-Program Size: Code=38520 RO-data=1276 RW-data=396 ZI-data=394476  
-".\Objects\mFw.axf" - 0 Error(s), 2 Warning(s).
+.\Objects\mFw.axf: Error: L6218E: Undefined symbol mSpiTask_init (referred from mconfig.o).
+Not enough information to list image symbols.
+Not enough information to list load addresses in the image map.
+Finished: 2 information, 0 warning and 1 error messages.
+".\Objects\mFw.axf" - 1 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -107,7 +112,8 @@ Package Vendor: Keil
   C:\Users\M\AppData\Local\Keil\Arm\Packs\Keil\STM32F4xx_DFP\1.0.8\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:03
+Target not created.
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
